--- a/thumbnails_generator.html
+++ b/thumbnails_generator.html
@@ -85,11 +85,11 @@
                             </a>
                         </li>
 
-                        <!-- Billing -->
+                        <!-- Profile -->
                         <li>
-                            <a href="#" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
+                            <a href="profile.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                                 <i class="bi bi-credit-card"></i>
-                                <span>Billing</span>
+                                <span>Profile</span>
                             </a>
                         </li>
 
