logo and images changed

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,8 +14,7 @@
         <div class="tw-flex tw-items-center tw-justify-between tw-h-full tw-px-6">
             <!-- Logo -->
             <a href="index.html" class="tw-flex tw-items-center tw-gap-2">
-                <img src="./assets/logo/logo.png" alt="Logo" class="tw-h-8 tw-w-8 dark:tw-invert" />
-                <span class="tw-text-xl tw-font-semibold">FetchViews</span>
+                <img src="./assets/logo/logo3.png" alt="Logo" class="tw-h-8 tw-w-13" />
             </a>
 
             <!-- Icônes Droite -->
@@ -195,18 +194,8 @@
                     <ul class="tw-space-y-4">
                         <!-- Video 1 -->
                         <li class="tw-flex tw-justify-between tw-items-center tw-py-2 tw-border-b tw-border-gray-200 dark:tw-border-gray-700">
-                            <span class="tw-font-medium tw-text-gray-800 dark:tw-text-gray-200">Titre de la Vidéo 1</span>
-                            <span class="tw-text-sm tw-text-gray-500 dark:tw-text-gray-400">25 Avril 2024, 14:00</span>
-                        </li>
-                        <!-- Video 2 -->
-                        <li class="tw-flex tw-justify-between tw-items-center tw-py-2 tw-border-b tw-border-gray-200 dark:tw-border-gray-700">
-                            <span class="tw-font-medium tw-text-gray-800 dark:tw-text-gray-200">Titre de la Vidéo 2</span>
-                            <span class="tw-text-sm tw-text-gray-500 dark:tw-text-gray-400">26 Avril 2024, 10:30</span>
-                        </li>
-                        <!-- Video 3 -->
-                        <li class="tw-flex tw-justify-between tw-items-center tw-py-2">
-                            <span class="tw-font-medium tw-text-gray-800 dark:tw-text-gray-200">Titre de la Vidéo 3</span>
-                            <span class="tw-text-sm tw-text-gray-500 dark:tw-text-gray-400">27 Avril 2024, 16:45</span>
+                            <span class="tw-font-medium tw-text-gray-800 dark:tw-text-gray-200">Is AI the future of thumbnails?</span>
+                            <span class="tw-text-sm tw-text-gray-500 dark:tw-text-gray-400">1st of January 2025</span>
                         </li>
                     </ul>
                 </div>
