--- a/gallery.html
+++ b/gallery.html
@@ -21,8 +21,7 @@
                     <!-- Logo et Dashboard -->
                     <div class="tw-flex tw-items-center">
                         <a href="index.html" class="tw-flex tw-items-center tw-gap-2">
-                            <img src="./assets/logo/logo.png" alt="Logo" class="tw-h-8 tw-w-8 dark:tw-invert" />
-                            <span class="tw-text-xl tw-font-semibold">FetchViews</span>
+                            <img src="./assets/logo/logo3.png" alt="Logo" class="tw-h-8 tw-w-13" />
                         </a>
                     </div>
 
