--- a/login.html
+++ b/login.html
@@ -20,8 +20,7 @@
                 <div class="tw-w-full md:tw-w-1/2 tw-p-8 lg:tw-p-12">
                     <div class="tw-mb-8">
                         <a href="index.html" class="tw-flex tw-items-center tw-gap-2">
-                            <img src="./assets/logo/logo.png" alt="Logo" class="tw-h-8 tw-w-8 dark:tw-invert" />
-                            <span class="tw-text-xl tw-font-semibold">FetchViews</span>
+                            <img src="./assets/logo/logo3.png" alt="Logo" class="tw-h-8 tw-w-13" />
                         </a>
                     </div>
 
