--- a/thumbnails_generator_with_thumbnail.html
+++ b/thumbnails_generator_with_thumbnail.html
@@ -14,8 +14,7 @@
             <div class="tw-flex tw-items-center tw-justify-between tw-h-full tw-px-6">
                 <!-- Logo -->
                 <a href="index.html" class="tw-flex tw-items-center tw-gap-2">
-                    <img src="./assets/logo/logo.png" alt="Logo" class="tw-h-8 tw-w-8 dark:tw-invert" />
-                    <span class="tw-text-xl tw-font-semibold">FetchViews</span>
+                    <img src="./assets/logo/logo3.png" alt="Logo" class="tw-h-8 tw-w-13" />
                 </a>
     
                 <!-- Icônes Droite -->
