--- a/profile.html
+++ b/profile.html
@@ -94,7 +94,7 @@
 
                     <!-- My videos -->
                     <li>
-                        <a href="#" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
+                        <a href="myvideos.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                             <i class="bi bi-collection-play"></i>
                             <span>My videos</span>
                         </a>
@@ -127,7 +127,7 @@
             <div class="tw-max-w-5xl tw-mx-auto tw-rounded-lg tw-p-8">
                 <!-- Rectangle arrondi pour le profil -->
                 <div id="profileCard" class="tw-flex tw-items-center tw-bg-[#1f1f1f] tw-rounded-lg tw-p-6 tw-mb-8">
-                    <img src="./assets/images/profile/avatar_icon.png" alt="User Avatar" class="tw-w-20 tw-h-20 tw-rounded-full tw-mr-6">
+                    <img src="./assets/images/profile/profile.png" alt="User Avatar" class="tw-w-20 tw-h-20 tw-rounded-full tw-mr-6">
                     <div>
                         <h3 id="fullName" class="tw-text-2xl tw-font-bold tw-text-white"></h3>
                         <p id="email" class="tw-text-white"></p>
