--- a/index.html
+++ b/index.html
@@ -791,10 +791,10 @@
                 >   
                     <a href="#" class="tw-w-full tw-place-items-center tw-flex tw-flex-col tw-gap-6">
                         <img
-                            src="./assets/logo/logo.png"
+                            src="./assets/logo/logo3.png"
                             alt="logo"
                             srcset=""
-                            class="tw-max-w-[120px] dark:tw-invert"
+                            class="tw-max-w-[120px]"
                         />
                         <div class="tw-max-w-[120px] tw-text-center tw-text-3xl tw-h-fit">
                             FetchViews
