--- a/myvideos.html
+++ b/myvideos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FetchViews - Heartlist</title>
+    <title>FetchViews - My Videos</title>
     <link rel="stylesheet" href="css/tailwind-runtime.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" />
@@ -94,7 +94,7 @@
 
                     <!-- My videos -->
                     <li>
-                        <a href="myvideos.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
+                        <a href="myvideos.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg tw-bg-[#6366f1] tw-text-white">
                             <i class="bi bi-collection-play"></i>
                             <span>My videos</span>
                         </a>
@@ -102,7 +102,7 @@
 
                     <!-- My heartlist -->
                     <li>
-                        <a href="heartlist.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg tw-bg-[#6366f1] tw-text-white">
+                        <a href="heartlist.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                             <i class="bi bi-heart"></i>
                             <span>My heartlist</span>
                         </a>
@@ -128,21 +128,21 @@
             <div class="tw-max-w-7xl tw-mx-auto">
                 <!-- Header Section -->
                 <div class="tw-mb-8">
-                    <h1 class="tw-text-2xl tw-font-bold tw-mb-2">My Heartlist</h1>
-                    <p class="tw-text-gray-600 dark:tw-text-gray-400">Manage your favorite YouTube ideas</p>
+                    <h1 class="tw-text-2xl tw-font-bold tw-mb-2">My Videos</h1>
+                    <p class="tw-text-gray-600 dark:tw-text-gray-400">Manage your YouTube videos</p>
                 </div>
 
                 <!-- Grid de miniatures -->
-                <div id="heartlist-container" 
+                <div id="myvideos-container" 
                      class="tw-grid tw-grid-cols-1 md:tw-grid-cols-2 lg:tw-grid-cols-3 xl:tw-grid-cols-4 
                             tw-gap-6 tw-auto-rows-max">
-                    <!-- Les miniatures likées seront chargées ici dynamiquement -->
+                    <!-- Les miniatures seront chargées ici dynamiquement -->
                 </div>
 
                 <!-- Message si aucune miniature -->
                 <div id="empty-state" class="tw-hidden tw-text-center tw-py-12">
-                    <i class="bi bi-heart tw-text-4xl tw-text-gray-400 tw-mb-4"></i>
-                    <p class="tw-text-gray-600 dark:tw-text-gray-400">No liked thumbnails yet</p>
+                    <i class="bi bi-collection-play tw-text-4xl tw-text-gray-400 tw-mb-4"></i>
+                    <p class="tw-text-gray-600 dark:tw-text-gray-400">No YouTube videos added yet</p>
                 </div>
             </div>
         </main>
@@ -151,7 +151,7 @@
     <!-- Scripts -->
     <script src="scripts/components.js"></script>
     <script src="scripts/api.js" type="module"></script>
-    <script src="scripts/heartlist.js" type="module"></script>
+    <script src="scripts/myvideos.js" type="module"></script>
     <script src="scripts/auth.js"></script>
 </body>
 </html> 
