--- a/workflow.html
+++ b/workflow.html
@@ -94,7 +94,7 @@
 
                     <!-- My videos -->
                     <li>
-                        <a href="#" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
+                        <a href="myvideos.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                             <i class="bi bi-collection-play"></i>
                             <span>My videos</span>
                         </a>
