Modification faq test commit push

--- a/index.html
+++ b/index.html
@@ -685,12 +685,12 @@
                     <h4
                         class="faq-accordion tw-flex tw-w-full tw-select-none tw-text-xl max-md:tw-text-lg"
                     >
-                        <span>How do I connect my Youtube account to FetchViews ?</span>
+                        <span>Is Fetch Views suitable for beginners or only for experienced creators?</span>
                         <i class="bi bi-plus tw-text-xl tw-origin-center tw-duration-300 tw-transition-transform 
                                     tw-ml-auto tw-font-semibold"></i>
                     </h4>
                     <div class="content max-lg:tw-text-sm">
-                        gsdffdsqmfhdsqfhdsqmfmdsqfmds
+                        Fetch Views is designed for all creators, whether beginners or experienced, who want to professionalize their activity and improve their results.
                     </div>
                 </div>
                 <hr>
@@ -700,12 +700,12 @@
                     <h4
                         class="faq-accordion tw-flex tw-w-full tw-select-none tw-text-xl max-md:tw-text-lg"
                     >
-                        <span>Question 1 ?</span>
+                        <span>Who can participate in the beta testing phase?</span>
                         <i class="bi bi-plus tw-text-xl tw-origin-center tw-duration-300 tw-transition-transform 
                                     tw-ml-auto tw-font-semibold"></i>
                     </h4>
                     <div class="content max-lg:tw-text-sm">
-                        fdhsqfmdshqfdhsqmfdmsq
+                        We are looking for motivated and active creators who are willing to provide constructive feedback to help us refine our solution.
                     </div>
                 </div>
                 <hr>
@@ -715,12 +715,12 @@
                     <h4
                         class="faq-accordion tw-flex tw-w-full tw-select-none tw-text-xl max-md:tw-text-lg"
                     >
-                        <span>What ?</span>
+                        <span>Is the beta testing phase free?</span>
                         <i class="bi bi-plus tw-text-xl tw-origin-center tw-duration-300 tw-transition-transform 
                                     tw-ml-auto tw-font-semibold"></i>
                     </h4>
                     <div class="content max-lg:tw-text-sm">
-                        fdsqfdsqfdsqfdsqfdsqfdsqfdsqf
+                        Yes, participating in the beta testing phase is completely free. In exchange, we ask for regular feedback to help us improve Fetch Views.
                     </div>
                 </div>
                 <hr>
@@ -731,12 +731,12 @@
                     <h4
                         class="faq-accordion tw-flex tw-w-full tw-select-none tw-text-xl max-md:tw-text-lg"
                     >
-                        <span>What ?</span>
+                        <span>Will Fetch Views be paid after the beta?</span>
                         <i class="bi bi-plus tw-text-xl tw-origin-center tw-duration-300 tw-transition-transform 
                                     tw-ml-auto tw-font-semibold"></i>
                     </h4>
                     <div class="content max-lg:tw-text-sm">
-                        fdsghghjgfjhgjhgjuykjhgbn
+                        After the beta, Fetch Views will offer a free version with basic features and premium options for advanced tools.
                     </div>
                 </div>
                 <hr>
