modification faq txt 4

--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                                     tw-ml-auto tw-font-semibold"></i>
                     </h4>
                     <div class="content max-lg:tw-text-sm">
-                        After the beta, Fetch Views will offer a free version with basic features and premium options for advanced tools.
+                        Yes, there will be a trial version available for users to test out Fetch Views before deciding to opt for a premium versions. This trial version will give users access to advanced tools for a limited time, allowing them to evaluate the features before making a decision.
                     </div>
                 </div>
                 <hr>
