ajout faq header + link to the section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <a class="header-links" href="#solutions"> Solutions </a>
                 <a class="header-links" href="#features"> Features </a>
                 <a class="header-links" href="#pricing"> Pricing </a>
+                <a class="header-links" href="#faq"> FAQ </a>
             </nav>
                 <div
                     class="lg:tw-mx-4 tw-flex tw-place-items-center tw-gap-[20px] tw-text-base max-md:tw-w-full 
@@ -668,6 +669,7 @@
 
         <section
             class="tw-relative tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-[10%] tw-p-[5%] tw-px-[10%]"
+            id="faq"
         >   
 
 
