delet features section in the header

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             >
                 <a class="header-links" href="#"> Home </a>
                 <a class="header-links" href="#solutions"> Solutions </a>
-                <a class="header-links" href="#features"> Features </a>
+                <!-- <a class="header-links" href="#features"> Features </a> -->
                 <a class="header-links" href="#pricing"> Pricing </a>
                 <a class="header-links" href="#faq"> FAQ </a>
             </nav>
