--- a/index.html
+++ b/index.html
@@ -799,23 +799,23 @@
                             srcset=""
                             class="tw-max-w-[120px]"
                         />
-                        <div class="tw-max-w-[120px] tw-text-center tw-text-3xl tw-h-fit">
-                            FetchViews
+                        <div class="tw-max-w-[150px] tw-text-center tw-text-3xl tw-h-fit">
+                            Fetch Views
                         </div>
                     </a>
                     <!-- <div class="tw-mt-3 tw-text-lg tw-font-semibold">Follow us</div> -->
-                    <div class="tw-flex tw-gap-4 tw-text-lg">
+                   <!--  <div class="tw-flex tw-gap-4 tw-text-lg">
                         <a
                             href="https://www.linkedin.com/"
                             aria-label="Linkedin"
                         >
                             <i class="bi bi-linkedin"></i>
                         </a>
-                    </div>
+                    </div>-->
 
                 </div>
 
-                <div class="tw-flex max-md:tw-flex-col tw-flex-wrap tw-gap-6 tw-h-full tw-w-full tw-justify-around">
+               <!-- <div class="tw-flex max-md:tw-flex-col tw-flex-wrap tw-gap-6 tw-h-full tw-w-full tw-justify-around">
                     <div class="tw-flex tw-h-full tw-w-[200px] tw-flex-col tw-gap-4">
                         <h2 class="tw-text-xl">Quick links</h2>
                         <div class="tw-flex tw-flex-col tw-gap-3">
@@ -836,12 +836,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             <hr class="tw-mt-8">
             <div class="tw-mt-2 tw-flex tw-gap-2 tw-flex-col tw-text-gray-700 dark:tw-text-gray-300 tw-place-items-center 
                     tw-text-[12px] tw-w-full tw-text-center tw-place-content-around">
-                <span>Copyright &#169; 2023-2025</span>
+                <span>Copyright &#169; 2025</span>
                 <span>All trademarks and copyrights belong to their respective owners.</span>
             </div>
 
@@ -866,5 +866,5 @@
     <script src="./scripts/components.js"></script>
     <script src="./index.js"></script>
 
-    <!-- By Paul: https://github.com/PaulleDemon -->
+   
 </html>
