modification contact section et ajout header contact

--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
                 class="tw-flex tw-h-full max-lg:tw-h-max tw-w-max tw-gap-5 tw-text-base max-lg:tw-mt-[30px] max-lg:tw-flex-col 
                         max-lg:tw-gap-5 lg:tw-mx-auto tw-place-items-center"
             >
-                <a class="header-links" href="#"> Home </a>
+                <a class="header-links" href="#hero-section"> Home </a>
                 <a class="header-links" href="#solutions"> Solutions </a>
                 <!-- <a class="header-links" href="#features"> Features </a> -->
                 <a class="header-links" href="#pricing"> Pricing </a>
                 <a class="header-links" href="#faq"> FAQ </a>
+                <a class="header-links" href="#contact"> Contact </a>
             </nav>
                 <div
                     class="lg:tw-mx-4 tw-flex tw-place-items-center tw-gap-[20px] tw-text-base max-md:tw-w-full 
@@ -752,37 +753,32 @@
         </section>
 
         <section
-            class="tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-[10%] tw-p-[5%] tw-px-[10%] max-md:tw-px-2"
+        class="tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-[10%] tw-p-[5%] tw-px-[10%] max-md:tw-px-2"
+        id="contact"
+    >
+        <div
+            class="tw-flex tw-w-full tw-max-w-[80%] tw-place-content-center tw-place-items-center tw-justify-between tw-gap-3 
+                    tw-rounded-xl tw-bg-[#F6F7FB] dark:tw-bg-[#171717] tw-p-8 max-md:tw-max-w-full max-md:tw-flex-col"
         >
-            <div
-                class="tw-flex tw-w-full tw-max-w-[80%] tw-place-content-center tw-place-items-center tw-justify-between tw-gap-3 
-                        tw-rounded-lg tw-bg-[#F6F7FB] dark:tw-bg-[#171717] tw-p-6 max-md:tw-max-w-full max-md:tw-flex-col"
-            >
-                <div class="tw-flex tw-flex-col max-lg:tw-text-center tw-gap-1">
-                    <h2 class="tw-text-2xl tw-text-gray-800 dark:tw-text-gray-200 max-md:tw-text-xl">
-                        Join our newsletter
-                    </h2>
-                    <div class="tw-text-gray-700 dark:tw-text-gray-300">Get product insights and updates.</div>
-                </div>
-
-                <div
-                    class="tw-flex tw-h-[60px] tw-place-items-center tw-gap-2 tw-overflow-hidden tw-p-2"
-                >
-                    <input
-                        type="email"
-                        class="input tw-h-full tw-w-full !tw-border-gray-600 tw-p-2 tw-outline-none"
-                        placeholder="email"
-                    />
+            <div class="tw-flex tw-flex-col max-lg:tw-text-center tw-gap-3">
+                <h2 class="tw-text-3xl tw-font-semibold tw-text-gray-800 dark:tw-text-gray-200 max-md:tw-text-2xl">
+                    Contact
+                </h2>
+                <p class="tw-text-lg tw-text-gray-700 dark:tw-text-gray-300">
+                    We’d love to hear from you. Reach out to us at the email below.
+                </p>
+                <div class="tw-flex tw-flex-col tw-items-center tw-gap-2">
                     <a
-                        class="btn !tw-rounded-full !tw-border-[1px] !tw-text-black !tw-border-solid !tw-border-black  dark:!tw-text-white
-                            dark:!tw-border-gray-300 !tw-bg-transparent tw-transition-colors tw-duration-[0.3s]"
-                        href=""
+                        href="mailto:contact@example.com"
+                        class="tw-bg-gradient-to-r tw-from-[#4F8CFF] tw-to-[#2F69FF] tw-text-white tw-px-6 tw-py-3 tw-rounded-full tw-text-lg tw-font-semibold tw-shadow-lg tw-transition-all tw-duration-[0.3s] hover:tw-bg-gradient-to-l hover:tw-from-[#2F69FF] hover:tw-to-[#4F8CFF]"
                     >
-                        Signup
+                        contact@fetchviews.com
                     </a>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+    
 
         <footer
             class="tw-mt-auto tw-flex tw-flex-col tw-w-full tw-gap-4 tw-text-sm tw-pt-[5%] tw-pb-10 tw-px-[10%] 
