--- a/thumbnails_generator.html
+++ b/thumbnails_generator.html
@@ -194,6 +194,7 @@
 
         <!-- Scripts -->
         <script src="scripts/components.js"></script>
+        <script src="scripts/generating_images.js" type="module"></script>
         <script src="scripts/api.js" type="module"></script>
         <script>
             function toggleYouTubeConnection() {
