--- a/workflow.html
+++ b/workflow.html
@@ -183,6 +183,18 @@
                     </div>
                 </div>
 
+                <!-- Prompts -->
+                <div class="tw-bg-white dark:tw-bg-[#17181b] tw-rounded-xl tw-shadow-lg tw-p-6 tw-mb-6">
+                    <div class="tw-space-y-4">
+                        <label class="tw-block tw-text-sm tw-font-medium">Prompt</label>
+                        <input 
+                            id="prompt"
+                            type="text" 
+                            placeholder="Enter prompt to generate thumbnail"
+                            class="tw-w-full tw-px-4 tw-py-2 tw-rounded-lg tw-bg-gray-50 dark:tw-bg-[#17181b] tw-border dark:tw-border-gray-700 focus:tw-outline-none focus:tw-border-[#6366f1] focus:tw-ring-1 focus:tw-ring-[#6366f1]">
+                    </div>
+                </div>
+
                 <!-- Bouton Next step -->
                 <div class="tw-flex tw-justify-center">
                     <button onclick="saveVideoData()" class="tw-px-8 tw-py-3 tw-bg-[#6366f1] tw-text-white tw-rounded-lg hover:tw-bg-[#5558e3] tw-transition-colors">
@@ -194,7 +206,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="scripts/components.js"></script>
     <script src="scripts/api.js" type="module"></script>
     <script>
         function toggleYouTubeConnection() {
@@ -246,10 +257,12 @@
             const title = document.getElementById('videoTitle').value;
             const description = document.getElementById('videoDescription').value;
             const tags = document.getElementById('videoTags').value;
+            const prompt = document.getElementById('prompt').value;
 
             localStorage.setItem('videoTitle', title);
             localStorage.setItem('videoDescription', description);
             localStorage.setItem('videoTags', tags);
+            localStorage.setItem('prompt', prompt);
 
             window.location.href = 'thumbnails.html';
         }
