--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                     class="lg:tw-mx-4 tw-flex tw-place-items-center tw-gap-[20px] tw-text-base max-md:tw-w-full 
                             max-md:tw-flex-col max-md:tw-place-content-center"
                 >
-                    <button type="button" onclick="toggleMode()" class="header-links tw-text-gray-600 dark:tw-text-gray-300" title="toggle-theme" 
+                    <!--<button type="button" onclick="toggleMode()" class="header-links tw-text-gray-600 dark:tw-text-gray-300" title="toggle-theme" 
                             id="theme-toggle"> 
                         <i class="bi bi-sun" id="toggle-mode-icon"></i>
-                    </button>
+                    </button> -->
                     <a
                         href="login.html"
                         aria-label="Login/Sign in"
@@ -753,31 +753,36 @@
         </section>
 
         <section
-        class="tw-flex tw-w-full tw-flex-col tw-place-content-center tw-place-items-center tw-gap-[10%] tw-p-[5%] tw-px-[10%] max-md:tw-px-2"
-        id="contact"
+    class="tw-w-full tw-flex tw-flex-col tw-items-center tw-py-10 tw-px-6 tw-bg-[#121212]"
+    id="contact"
+>
+    <div
+        class="tw-w-full tw-max-w-4xl tw-rounded-xl tw-shadow-lg tw-bg-[#1E1E1E] tw-p-8 max-md:tw-p-6"
     >
-        <div
-            class="tw-flex tw-w-full tw-max-w-[80%] tw-place-content-center tw-place-items-center tw-justify-between tw-gap-3 
-                    tw-rounded-xl tw-bg-[#F6F7FB] dark:tw-bg-[#171717] tw-p-8 max-md:tw-max-w-full max-md:tw-flex-col"
+        <h2
+            class="tw-text-4xl tw-font-bold tw-text-center tw-text-gray-100 max-md:tw-text-3xl"
         >
-            <div class="tw-flex tw-flex-col max-lg:tw-text-center tw-gap-3">
-                <h2 class="tw-text-3xl tw-font-semibold tw-text-gray-800 dark:tw-text-gray-200 max-md:tw-text-2xl">
-                    Contact
-                </h2>
-                <p class="tw-text-lg tw-text-gray-700 dark:tw-text-gray-300">
-                    We’d love to hear from you. Reach out to us at the email below.
-                </p>
-                <div class="tw-flex tw-flex-col tw-items-center tw-gap-2">
-                    <a
-                        href="mailto:contact@example.com"
-                        class="tw-bg-gradient-to-r tw-from-[#4F8CFF] tw-to-[#2F69FF] tw-text-white tw-px-6 tw-py-3 tw-rounded-full tw-text-lg tw-font-semibold tw-shadow-lg tw-transition-all tw-duration-[0.3s] hover:tw-bg-gradient-to-l hover:tw-from-[#2F69FF] hover:tw-to-[#4F8CFF]"
-                    >
-                        contact@fetchviews.com
-                    </a>
-                </div>
-            </div>
+            Contact Us
+        </h2>
+        <p
+            class="tw-text-center tw-text-lg tw-text-gray-400 tw-mt-4 max-md:tw-text-base"
+        >
+            We would love to hear from you! Feel free to reach out to us at the email address below.
+        </p>
+        <div
+            class="tw-flex tw-flex-col tw-items-center tw-gap-4 tw-mt-6"
+        >
+            <a
+                href="mailto:contact@example.com"
+                class="tw-bg-gradient-to-r tw-from-[#4F8CFF] tw-to-[#2F69FF] tw-text-white tw-px-8 tw-py-4 tw-rounded-full tw-text-lg tw-font-semibold tw-shadow-md tw-transition-all tw-duration-300 hover:tw-bg-gradient-to-l hover:tw-from-[#2F69FF] hover:tw-to-[#4F8CFF] hover:tw-shadow-lg"
+            >
+                contact@fetchviews.com
+            </a>
         </div>
-    </section>
+    </div>
+</section>
+
+
     
 
         <footer
@@ -820,19 +825,18 @@
                             <a href="#" class="footer-link">Thumbnails generator</a>
                             <a href="#" class="footer-link">Profile</a>
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="tw-flex tw-h-full tw-w-[200px] tw-flex-col tw-gap-4">
-                        <h2 class="tw-text-xl">Legal</h2>
+                       <!-- <h2 class="tw-text-xl">Legal</h2> -->
                         <div class="tw-flex tw-flex-col tw-gap-3">
                             <a href="#" class="footer-link">Legal information</a>
                             <a href="#" class="footer-link">Terms of service</a>
                             <a href="#" class="footer-link">Privacy Policy</a>
-                            <a href="#" class="footer-link">Refunds Policy</a>
                         </div>
                     </div>
                 </div>
-            </div>-->
+            </div>
 
             <hr class="tw-mt-8">
             <div class="tw-mt-2 tw-flex tw-gap-2 tw-flex-col tw-text-gray-700 dark:tw-text-gray-300 tw-place-items-center 
