add margin ui choose plan

--- a/index.html
+++ b/index.html
@@ -608,7 +608,9 @@
                     </ul>
                     <a
                         href="sign_up.html"
-                        class="btn tw-mt-auto !tw-w-full tw-transition-transform tw-duration-[0.3s] hover:tw-scale-x-[1.02]"
+                        class="btn tw-mt-6 !tw-w-full tw-transition-transform tw-duration-[0.3s] hover:tw-scale-x-[1.02]"
+
+
                     >
                         Choose plan
                     </a>
