--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="./assets/logo/favicon2.png"
             type="image/x-icon"
         />
-
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
         <!-- Open Graph / Facebook -->
         <meta property="og:title" content="All your Youtube workflow in one place" />
         <meta property="og:description" content="State of the art AI tools to boost your Youtube contents" />
@@ -144,13 +144,13 @@
                 <div
                     class="tw-flex tw-flex-col tw-min-h-[60vh] tw-place-content-center tw-items-center"
                 >
-                    <h2
-                        class="reveal-up tw-text-center tw-text-7xl tw-font-semibold tw-uppercase tw-leading-[90px] max-lg:tw-text-4xl max-md:tw-leading-snug"
-                    >
-                        <span class=""> Your Youtube workflow </span>
-                        <br />
-                        <span class="tw-font-thin tw-font-serif"> in one place </span>
-                    </h2>
+                            <h2
+                            class="reveal-up tw-text-center tw-text-7xl tw-font-semibold tw-uppercase tw-leading-[90px] tw-font-montserrat max-lg:tw-text-4xl max-md:tw-leading-snug"
+                        >
+                            <span class=""> Your Youtube workflow </span>
+                            <br />
+                            <span class=""> in one place </span>
+                        </h2>   
                     <div
                         class="reveal-up tw-mt-8 tw-max-w-[450px] tw-text-lg max-lg:tw-text-base tw-p-2 tw-text-center
                          tw-text-gray-800 dark:tw-text-white max-lg:tw-max-w-full"
@@ -576,7 +576,7 @@
                         -->
                     </h3>
                     <p class="tw-mt-3 tw-text-center tw-text-gray-800 dark:tw-text-gray-200">
-                        Early access for youtubers willing to boost their youtube contents
+                        Early access for youtubers willing to boost their youtube contents.
                     </p>
                     <hr />
                     <ul
@@ -584,7 +584,7 @@
                     >
                         <li class="tw-flex tw-gap-2">
                             <i class="bi bi-check-circle-fill"></i>
-                            <span>Unlimited thumbnails generation</span>    
+                            <span>Thumbnails generation</span>    
                         </li>
                         <li class="tw-flex tw-gap-2">
                             <i class="bi bi-check-circle-fill"></i>
