--- a/edit_thumbnail.html
+++ b/edit_thumbnail.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Playfair+Display:wght@400;700&family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts/auth.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body class="tw-bg-[#fcfcfc] dark:tw-bg-black tw-text-black dark:tw-text-white">
     <!-- En-tête -->
@@ -178,8 +179,8 @@
                     <!-- Zone de l'image et du prompt à droite -->
                     <div class="tw-flex-1 tw-flex tw-flex-col tw-gap-8">
                         <!-- Image en haut -->
-                        <div id="imgContainer" class="tw-flex tw-justify-center tw-items-start">
-                            <div class="tw-aspect-video tw-rounded-lg tw-overflow-hidden tw-border-4 tw-border-[#6366f1] tw-max-w-4xl tw-mx-auto">
+                        <div id="imgContainer" class="tw-flex tw-justify-center tw-items-center tw-max-w-4xl tw-mx-auto tw-aspect-video">
+                            <div class="tw-rounded-lg tw-overflow-hidden tw-border-4 tw-border-[#6366f1] tw-w-full">
                                 <img id="thumbnailToEdit" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" alt="Selected Thumbnail" class="tw-w-full tw-h-full tw-object-cover">
                             </div>
                         </div>
@@ -200,13 +201,12 @@
                     <button onclick="goBack()" class="tw-px-8 tw-py-3 tw-border dark:tw-border-gray-700 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800 tw-transition-colors">
                         Previous step
                     </button>
-                    <button class="tw-px-8 tw-py-3 tw-bg-[#6366f1] tw-text-white tw-rounded-lg hover:tw-bg-[#5558e3] tw-transition-colors">
+                    <button id="generateBtn" class="tw-px-8 tw-py-3 tw-bg-[#6366f1] tw-text-white tw-rounded-lg hover:tw-bg-[#5558e3] tw-transition-colors">
                         Generate
                     </button>
-                    <a href="thumbnails_generator_with_thumbnail.html">
-                        <button class="tw-px-8 tw-py-3 tw-bg-[#6366f1] tw-text-white tw-rounded-lg hover:tw-bg-[#5558e3] tw-transition-colors">
-                            Next step
-                        </button>
+                    <button id="nextStepBtn" class="tw-px-8 tw-py-3 tw-bg-[#6366f1] tw-text-white tw-rounded-lg hover:tw-bg-[#5558e3] tw-transition-colors">
+                        Next step
+                    </button>
                     </a>
                 </div>
             </div>
@@ -531,6 +531,39 @@
             }
             isDragging = false;
         }
+
+        document.getElementById('nextStepBtn').addEventListener('click', function() {
+            var imgContainer = document.getElementById('imgContainer');
+                        
+            html2canvas(imgContainer, {
+                scrollY: -window.scrollY, 
+                scale: 1,
+                useCORS: true,
+            }).then(function(canvas) {
+                var base64Image = canvas.toDataURL();
+
+                localStorage.setItem('selectedThumbnail', base64Image);
+
+                console.log(localStorage.getItem('selectedThumbnail'));
+
+                window.location.href = 'planify_video.html'; 
+            }).catch(function(error) {
+                console.error("Error while capturing image:", error);
+            });
+        });
+
+        document.getElementById('generateBtn').addEventListener('click', function() {
+            var base64Image = localStorage.getItem('selectedThumbnail');
+            if (base64Image) {
+                // Créer un lien de téléchargement
+                var link = document.createElement('a');
+                link.href = base64Image;
+                link.download = 'thumbnail.png';  // Nom du fichier à télécharger
+                link.click();  // Déclencher le téléchargement
+            } else {
+                console.error('Image not found in localStorage');
+            }
+        });
     </script>
 
 <style>
