--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
                 <div class="tw-hidden md:tw-block md:tw-w-1/2">
                     <div class="tw-relative tw-h-full">
                         <img 
-                            src="https://images.unsplash.com/photo-1616763355603-9755a640a287?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" 
+                            src="assets\images\home\FV_mockup2.png" 
                             class="tw-h-full tw-w-full tw-object-cover"
                             alt="Login background"
                         />
