--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 
                     <div class="tw-flex tw-h-full tw-w-[200px] tw-flex-col tw-gap-4">
                        <!-- <h2 class="tw-text-xl">Legal</h2> -->
-                        <div class="tw-flex tw-flex-col tw-gap-3">
+                        <div class="tw-flex tw-flex-col tw-gap-3 tw-mt-8">
                             <a href="#" class="footer-link">Legal information</a>
                             <a href="terms_of_service.html" class="footer-link">Terms of Service</a>
                             <a href="#" class="footer-link">Privacy Policy</a>
