--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -19,7 +19,7 @@
         <div class="tw-max-w-7xl tw-mx-auto tw-flex tw-justify-between tw-items-center">
             <h1 class="tw-text-2xl tw-font-bold">Terms of Service</h1>
             <nav class="tw-flex tw-gap-6">
-                <a href="index.html" class="tw-text-gray-700 dark:tw-text-gray-300 hover:tw-text-blue-500">Home</a>
+                <a href="index.html" class="tw-text-2xl tw-text-gray-700 dark:tw-text-gray-300 hover:tw-text-blue-500">Home</a>
 
             </nav>
         </div>
