--- a/edit_thumbnail.html
+++ b/edit_thumbnail.html
@@ -137,7 +137,7 @@
                     <div class="tw-w-2/5 tw-bg-[#17181B] tw-p-6 tw-rounded-2xl tw-shadow-lg">
                         <div class="tw-flex tw-flex-col tw-gap-4">
                             <h1 class="tw-text-xl tw-font-bold tw-mb-6 tw-text-center tw-px-4 tw-py-2 tw-text-white tw-rounded-lg">
-                                Drag and drop menu
+                                Editing menu
                             </h1>
                             <button class="tw-px-4 tw-py-2 tw-bg-[#6366f1] tw-text-white tw-rounded-lg hover:tw-bg-[#5558e3] tw-transition-colors font-burbank" onclick="addText('font-burbank')">
                                 <i class="fas fa-font"></i> Burbank Big
@@ -179,7 +179,7 @@
                     <!-- Zone de l'image et du prompt à droite -->
                     <div class="tw-flex-1 tw-flex tw-flex-col tw-gap-8">
                         <!-- Image en haut -->
-                        <div id="imgContainer" class="tw-flex tw-justify-center tw-items-center tw-max-w-4xl tw-mx-auto tw-aspect-video">
+                        <div id="imgContainer" class="tw-relative tw-w-full tw-aspect-video tw-overflow-hidden">
                             <div class="tw-rounded-lg tw-overflow-hidden tw-border-4 tw-border-[#6366f1] tw-w-full">
                                 <img id="thumbnailToEdit" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" alt="Selected Thumbnail" class="tw-w-full tw-h-full tw-object-cover">
                             </div>
@@ -274,6 +274,9 @@
         let rectangleColor = 'rgb(255, 0, 0)';
 
         function addText(fontClass) {
+            const imgContainer = document.getElementById('imgContainer');
+            const containerRect = imgContainer.getBoundingClientRect();
+
             var text = document.createElement('div');
             text.contentEditable = true;
             text.style.position = 'absolute';
@@ -282,18 +285,18 @@
             text.innerText = 'Write a title';
             text.classList.add(fontClass);
             imgContainer.appendChild(text);
-            text.style.top = '400px';  
-            text.style.left = '1000px';  
+            text.style.left = `${containerRect.width / 2}px`; 
+            text.style.top = `${containerRect.height / 2}px`; 
 
             text.addEventListener('mousedown', function(event) {
                 var shiftX = event.clientX - text.getBoundingClientRect().left;
                 var shiftY = event.clientY - text.getBoundingClientRect().top;
-                text.style.position = 'absolute';
                 text.style.zIndex = 1000;
 
                 function moveAt(pageX, pageY) {
-                    text.style.left = pageX - shiftX + 'px';
-                    text.style.top = pageY - shiftY + 'px';
+                    const containerRect = imgContainer.getBoundingClientRect();
+                    text.style.left = `${pageX - shiftX - containerRect.left}px`;
+                    text.style.top = `${pageY - shiftY - containerRect.top}px`;
                 }
 
                 function onMouseMove(event) {
@@ -370,13 +373,15 @@
         let offsetX, offsetY;
 
         function addRectangle() {
+            const imgContainer = document.getElementById('imgContainer');
+            const containerRect = imgContainer.getBoundingClientRect();
             rectangle = document.createElement('div');
             rectangle.style.width = '200px';
             rectangle.style.height = '100px';
             rectangle.style.position = 'absolute';
             rectangle.style.backgroundColor = rectangleColor; // Rouge opaque
-            rectangle.style.top = '400px';  // Position initiale du rectangle
-            rectangle.style.left = '1200px';  // Position initiale du rectangle
+            rectangle.style.left = `${containerRect.width / 4}px`;  // Positionnement relatif au conteneur
+            rectangle.style.top = `${containerRect.height / 4}px`;
             rectangle.style.border = 'none'; // Pas de bordure initialement
             document.getElementById('imgContainer').appendChild(rectangle);
 
@@ -532,25 +537,57 @@
             isDragging = false;
         }
 
-        document.getElementById('nextStepBtn').addEventListener('click', function() {
-            var imgContainer = document.getElementById('imgContainer');
-                        
-            html2canvas(imgContainer, {
-                scrollY: -window.scrollY, 
-                scale: 1,
-                useCORS: true,
-            }).then(function(canvas) {
-                var base64Image = canvas.toDataURL();
+        document.getElementById('nextStepBtn').addEventListener('click', function () {
+            const imgContainer = document.getElementById('imgContainer');
+            const editableTexts = imgContainer.querySelectorAll('[contenteditable="true"]');
 
-                localStorage.setItem('selectedThumbnail', base64Image);
+            // Appliquer un décalage temporaire uniquement pour les textes
+            editableTexts.forEach((text) => {
+                const currentTop = parseFloat(text.style.top) || 0;
+                const currentLeft = parseFloat(text.style.left) || 0;
 
-                console.log(localStorage.getItem('selectedThumbnail'));
+                // Ajustement manuel (par exemple, décaler de -10px en haut)
+                text.setAttribute('data-original-top', currentTop);
+                text.setAttribute('data-original-left', currentLeft);
 
-                window.location.href = 'planify_video.html'; 
-            }).catch(function(error) {
-                console.error("Error while capturing image:", error);
+                // Appliquer un décalage (ajustez les valeurs selon vos besoins)
+                text.style.top = `${currentTop - 10}px`; // Décalage vers le haut
+                text.style.left = `${currentLeft}px`; // Garder la position horizontale
+                text.contentEditable = 'false'; // Désactiver temporairement l'édition
+            });
+
+            // Attendre le chargement des polices avant de capturer
+            document.fonts.ready.then(() => {
+                html2canvas(imgContainer, {
+                    scrollY: -window.scrollY,
+                    scale: window.devicePixelRatio,
+                    useCORS: true,
+                }).then(function (canvas) {
+                    const base64Image = canvas.toDataURL();
+                    localStorage.setItem('selectedThumbnail', base64Image);
+                    console.log(localStorage.getItem('selectedThumbnail'));
+                    window.location.href = 'planify_video.html';
+                }).catch(function (error) {
+                    console.error('Error while capturing image:', error);
+                }).finally(() => {
+                    // Restaurer les positions originales des textes
+                    editableTexts.forEach((text) => {
+                        const originalTop = text.getAttribute('data-original-top');
+                        const originalLeft = text.getAttribute('data-original-left');
+
+                        // Restaurer les positions
+                        if (originalTop !== null) text.style.top = `${originalTop}px`;
+                        if (originalLeft !== null) text.style.left = `${originalLeft}px`;
+
+                        text.removeAttribute('data-original-top');
+                        text.removeAttribute('data-original-left');
+                        text.contentEditable = 'true'; // Réactiver l'édition
+                    });
+                });
             });
         });
+
+
 
         document.getElementById('generateBtn').addEventListener('click', function() {
             var base64Image = localStorage.getItem('selectedThumbnail');
