--- a/index.html
+++ b/index.html
@@ -176,68 +176,13 @@
 
  
        
-        <section
-            class="tw-relative tw-flex tw-w-full tw-max-w-[100vw] tw-flex-col tw-place-content-center tw-place-items-center tw-overflow-hidden tw-p-8"
-        >
-            <h2 class="reveal-up tw-text-3xl max-md:tw-text-xl">
-                Already trusted by several Youtube channels
-            </h2>
-
-            <div class="reveal-up carousel-container">
-                <div
-                    class="carousel lg:w-place-content-center tw-mt-10 tw-flex tw-w-full tw-gap-5 max-md:tw-gap-2"
-                >
-                    <div class="carousel-img tw-h-[30px] tw-w-[150px]">
-                        <img
-                            src="./assets/images/brand-logos/google.svg"
-                            alt="Google"
-                            class="tw-h-full tw-w-full tw-object-contain tw-grayscale tw-transition-colors hover:tw-grayscale-0"
-                            srcset=""
-                        />
-                    </div>
-                    <div class="carousel-img tw-h-[30px] tw-w-[150px]">
-                        <img
-                            src="./assets/images/brand-logos/microsoft.svg"
-                            alt="Microsoft"
-                            class="tw-h-full tw-w-full tw-object-contain tw-grayscale tw-transition-colors hover:tw-grayscale-0"
-                            srcset=""
-                        />
-                    </div>
-                    <div class="carousel-img tw-h-[30px] tw-w-[150px]">
-                        <img
-                            src="./assets/images/brand-logos/adobe.svg"
-                            alt="Adobe"
-                            class="tw-h-full tw-w-full tw-object-contain tw-grayscale tw-transition-colors hover:tw-grayscale-0"
-                            srcset=""
-                        />
-                    </div>
-                    <div class="carousel-img tw-h-[30px] tw-w-[150px]">
-                        <img
-                            src="./assets/images/brand-logos/airbnb.svg"
-                            alt="Airbnb"
-                            class="tw-h-full tw-w-full tw-object-contain tw-grayscale tw-transition-colors hover:tw-grayscale-0"
-                            srcset=""
-                        />
-                    </div>
-                    <div class="carousel-img tw-h-[30px] tw-w-[150px]">
-                        <img
-                            src="./assets/images/brand-logos/stripe.svg"
-                            alt="Stripe"
-                            class="tw-h-full tw-w-full tw-object-contain tw-grayscale tw-transition-colors hover:tw-grayscale-0"
-                            srcset=""
-                        />
-                    </div>
-                    <div class="carousel-img tw-h-[30px] tw-w-[150px]">
-                        <img
-                            src="./assets/images/brand-logos/reddit.svg"
-                            alt="Reddit"
-                            class="tw-h-full tw-w-full tw-object-contain tw-grayscale tw-transition-colors hover:tw-grayscale-0"
-                            srcset=""
-                        />
-                    </div>
-                </div>
+        <section class="tw-relative tw-flex tw-w-full tw-max-w-[100vw] tw-flex-col tw-place-content-center tw-place-items-center tw-overflow-hidden tw-p-8">
+            <div class="image-scroll-container">
+              <div class="image-scroll">
+                <img src="assets/images/thumbnails_generated/thumbnail_created_with_ai.jpg" alt="Image 4">
+              </div>
             </div>
-        </section>
+          </section>
       
 
         <section
