landing page updated

--- a/edit_thumbnail.html
+++ b/edit_thumbnail.html
@@ -182,13 +182,15 @@
                     <button id="nextStepBtn" class="tw-px-8 tw-py-3 tw-bg-[#6366f1] tw-text-white tw-rounded-lg hover:tw-bg-[#5558e3] tw-transition-colors">
                         Next step
                     </button>
+                    <button id="download" class="tw-px-8 tw-py-3 tw-bg-[#6366f1] tw-text-white tw-rounded-lg hover:tw-bg-[#5558e3] tw-transition-colors">
+                        Download
+                    </button>
                     </a>
                 </div>
             </div>
         </main>                        
     </div>
 
-    <script src="scripts/components.js"></script>
     <script src="scripts/api.js" type="module"></script>
     <script src="scripts/edit_thumbnail.js"></script>
     <script type="module">
